<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/edit_task_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".fragments.EditTask">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:padding="24dp"
        android:paddingTop="16dp">

        <TextView
            android:id="@+id/create_task_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:gravity="center"
            android:text="@string/edit_task_title"
            android:textStyle="bold" />

        <!-- Title -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_title_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/title_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_title_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Description -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_desc_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/description_label">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_desc_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:labelFor="@id/create_desc_label"
                android:lines="4"
                android:maxLines="4"
                android:minLines="2"
                android:scrollbars="vertical" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Status -->
        <TextView
            android:id="@+id/edit_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginBottom="20dp"
            android:text="@string/status_label" />

        <RadioGroup
            android:id="@+id/edit_status_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/edit_status_TODO"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_TODO" />

            <RadioButton
                android:id="@+id/edit_status_DOING"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_DOING" />

            <RadioButton
                android:id="@+id/edit_status_DONE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_DONE" />
        </RadioGroup>


        <!-- Date -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/edit_date_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginBottom="20dp"
            android:text="@string/end_date_label" />

        <!-- Buttons -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_edit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/button_edit" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/edit_cancel_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="12dp"
                android:layout_toStartOf="@id/edit_edit_button"
                android:text="@string/button_cancel" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>