<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/create_task_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <TableLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        tools:context=".fragments.CreateTask">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="20dp"
            android:gravity="center">

            <TextView
                android:id="@+id/create_task_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:gravity="center"
                android:text="@string/create_task_title"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:gravity="center">

            <TextView
                android:id="@+id/create_title_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_label" />

            <EditText
                android:id="@+id/create_title_input"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName"
                android:labelFor="@id/create_title_label"
                android:text="@string/create_title"
                tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:gravity="center">

            <TextView
                android:id="@+id/create_desc_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description_label" />

            <EditText
                android:id="@+id/create_desc_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="top|start"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:labelFor="@id/create_desc_label"
                android:lines="4"
                android:maxLines="4"
                android:minLines="2"
                android:scrollbars="vertical"
                android:text="@string/create_description"
                tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:gravity="center">

            <TextView
                android:id="@+id/create_date_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/end_date_label" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:gravity="center">

            <CalendarView
                android:id="@+id/create_date_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="40dp"
            android:layout_marginBottom="20dp"
            android:gravity="center">

            <Button
                android:id="@+id/create_cancel_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="2"
                android:text="@string/button_cancel" />

            <Button
                android:id="@+id/create_create_button"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:text="@string/button_create" />
        </TableRow>

    </TableLayout>
</ScrollView>